style.css
* {
    padding:0;
    margin:0;
}

body {
    display: flex;
    
    flex-direction: column;
    justify-content: space-between;
    padding: 0px;
    border: none;
    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.Header {
    display: flex;
    justify-content: space-between;
    padding: 10px;
    
    align-items: center;
    background-color: #1f2937;
    color: #e5e7eb;
    height: 50px;
}

.Profile {
    display: flex;
    gap: 10px;
    font-size: 24px;
    padding-left: 16px
}

.Pfp {
    border-radius: 50%;
}

.Name {
    padding-top: 7.5px;
}

ul.Header {
    display: flex;
    list-style: none;
    gap: 16px;
    font-size: 14px;
    margin-right: 0px;
    padding-right: 8px;
    align-items: center;
}

.Content {
    display: flex;
    flex-direction: column;
    flex: 1;
    align-items: center;
    gap: 50px;
    width: 100%;
}

.Footer {
    height: 50px;
    color: #e5e7eb;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #1f2937;
    font-size: 14px;
}

.About {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    background-color: #1f2937;
    color: #e5e7eb;
    padding-left: 25%;
    padding-right: 25%;
    padding-bottom: 25px;
    padding-top: 25px;
    gap: 24px;
}

.AboutLeft {
    display: flex;
    flex-direction: column;
    gap: 10px;
    min-width: 300px;
}

.AboutRight {
    display: flex;
}

.Card {
    border: 1px solid #eee;
    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
    border-radius: 4px;
    width: 260px;
    height: 400px;
    padding: 16px;
    display: flex;
    flex-direction: column;
    gap:16px;
    justify-content: flex-start;
    align-items: center;
  }
  

.Cards {
    display: flex;
    flex: 1;
    justify-content: space-evenly;
    flex-wrap: wrap;
    padding-left: 36px;
    padding-right: 36px;
    gap: 24px
  }

  .Projects {
    display: flex;
    flex-direction: column;
    gap: 24px;
    align-items: center;
  }

  .Experience {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 50px;
    gap: 12px;
  }

